--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      position: sticky;
+      top: 50%;
+      transform: translateY(-50%);
+      align-self: flex-start;
     }
 
     .qr-card {
@@ -219,11 +223,10 @@
       flex-direction: column;
       align-items: center;
       gap: 0.75rem;
-      transition: border-color 0.2s ease, box-shadow 0.2s ease;
+      will-change: auto;
     }
 
     .qr-card:hover {
-      border-color: rgba(0, 255, 136, 0.25);
       box-shadow: 0 12px 32px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(0, 255, 136, 0.1);
     }
 
